fixed bug with image resizing on mobile views

--- a/src/assets/scss/layout/_products.scss
+++ b/src/assets/scss/layout/_products.scss
@@ -30,8 +30,10 @@
 		background-color:_palette(accent1);
 	}
 
-	#foggersMisters, #handSanitiser, #cleanProtection {
-		
+	#foggersMistersPage, #handSanitiserPage, #cleanProtectionPage, #servicesPage {
+		img {
+			width: calc(100% + 0.5em);
+		}
 		.inner {
 			display: flex;
 			flex-wrap: wrap;
